deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-router
  namespace: control-plane
  labels:
    app: api-router
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-router
  template:
    metadata:
      labels:
        app: api-router
    spec:
      containers:
      - name: api-router
        image: hubadmin/tentoro:api-router-19
        imagePullPolicy: Always
        ports:
        - containerPort: 51600
      imagePullSecrets:
      - name: docker-cred  # Reference the newly created secret
