kafka-hosted.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: kafka
  namespace: control-plane
subsets:
  - addresses:
      - ip: 151.106.38.94
    ports:
      - port: 9092
        protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: kafka
  namespace: control-plane
spec:
  ports:
    - protocol: TCP
      port: 9092
      targetPort: 9092
  clusterIP: None
