mongo-hosted.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: mongo
  namespace: control-plane
subsets:
  - addresses:
      - ip: 151.106.38.94
    ports:
      - port: 32030
        protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: mongo
  namespace: control-plane
spec:
  ports:
    - protocol: TCP
      port: 32030
      targetPort: 32030
  clusterIP: None  # Headless service for DNS resolution
