service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-router-service
  namespace: control-plane
spec:
  type: ClusterIP
  selector:
    app: api-router
  ports:
    - protocol: TCP
      port: 80
      targetPort: 51600
