network-policy.yaml
apiVersion: networking.k8s.io/v1

kind: NetworkPolicy

metadata:

  name: allow-kafka-connection

  namespace: control-plane  # replace with your namespace if different

spec:

  podSelector: {}

  policyTypes:

  - Egress

  egress:

  - to:

    - ipBlock:

        cidr: 151.106.38.94/32

    ports:

    - protocol: TCP

      port: 9092
